# my_simple_c_http_server

./: .clang-tidy  .gitlab-ci.yml  .gitmodules  Makefile  README.md  TODO.md  meson.build  meson.options  thread_pool.h
.github/workflows/: android.yml  build.yml  lint.yml  musl.yml  test.yml  ws_test.yml
src/: all.variants.def.json  http_protocol.c  http_protocol.h  main.c  meson.build  myqueue.h  secure.c  secure.h  send.c  send.h  server.c  server.h  string_builder.c  string_builder.h  task3.c  thread_pool.c  thread_pool.h  utils.c  utils.h  ws.c  ws.h
src/ftp/: account.c  account.h  command.c  command.h  data.c  data.h  file_ops.c  file_ops.h  meson.build  protocol.h  send.c  send.h  server.c  server.h  state.c  state.h
src/generate/: generated_hpack.c  generated_hpack.h  hpack.ts  meson.build  meson_wrapper.sh  package.json  tsconfig.json
src/generic/: authentication.c  authentication.h  endian_compat.h  hash.c  hash.h  helper.c  helper.h  ip.c  ip.h  meson.build  read.c  read.h  secure.c  secure.h  sem.c  sem.h  send.c  send.h  serialize.c  serialize.h  signal_fd.c  signal_fd.h
src/http/: common_log.c  common_log.h  compression.c  compression.h  debug.c  debug.h  dynamic_hpack_table.c  dynamic_hpack_table.h  folder.c  folder.h  header.c  header.h  hpack.c  hpack.h  hpack_huffman.c  hpack_huffman.h  http_2.c  http_2.h  http_protocol.c  http_protocol.h  meson.build  mime.c  mime.h  parser.c  parser.h  protocol.c  protocol.h  routes.c  routes.h  send.c  send.h  server.c  server.h  uri.c  uri.h  v2.c  v2.h
src/utils/: meson.build  sized_buffer.c  sized_buffer.h  utils.h
src/ws/: extension.c  extension.h  handler.c  handler.h  macos_endian_compat.h  meson.build  thread_manager.c  thread_manager.h  types.h  ws.c  ws.h
subprojects/: bcrypt.wrap  crypt_blowfish.wrap  doctest.wrap  libbcrypt.wrap  liblzw.wrap  libtappp.wrap  lzws.wrap  tjson.wrap  tmap.h.wrap  tstr.h.wrap  tstr_builder.wrap  tvec.h.wrap
subprojects/packagefiles/: libbcrypt_android.diff  libbcrypt_macos.diff  lzws_string.diff
subprojects/packagefiles/bcrypt/: meson.build
subprojects/packagefiles/crypt_blowfish/: meson.build
subprojects/packagefiles/libbcrypt/: meson.build
subprojects/packagefiles/libbcrypt/crypt_blowfish/: meson.build
subprojects/packagefiles/liblzw/: meson.build
subprojects/packagefiles/libtappp/: meson.build
subprojects/packagefiles/lzws/: meson.build  meson.options
subprojects/packagefiles/lzws/src/: config.h  meson.build
subprojects/packagefiles/lzws/src/bigint/: meson.build
subprojects/packagefiles/lzws/src/compressor/: meson.build
subprojects/packagefiles/lzws/src/compressor/dictionary/: meson.build
subprojects/packagefiles/lzws/src/compressor/dictionary/sparse-array/: meson.build
subprojects/packagefiles/lzws/src/compressor/ratio/: meson.build
subprojects/packagefiles/lzws/src/decompressor/: meson.build
tests/: meson.build  test.ts  test_compression.ts  test_http_Parser.c
tests/autobahn/: fuzzingclient.json  install_autobahn.sh  install_pypy2.sh
tests/bench/: hash.cpp  main.cpp  meson.build  parsing.cpp  serialize.cpp  string_compare.cpp
tests/bench/hpack/: huffman.cpp
tests/custom/: meson.build
tests/custom/bench/: meson.build  parsing.cpp  string_compare.cpp
tests/custom/bench/hpack/: huffman.cpp
tests/custom/support/: generic.cpp  generic.hpp  meson.build
tests/custom/support/helpers/: c_types.hpp  cpp_types.cpp  cpp_types.hpp  hpack.cpp  http.cpp  http.hpp  json.cpp  json.hpp
tests/custom/unit/: basic.cpp  hash.cpp  http_parser.cpp  json.cpp  meson.build  serialize.cpp
tests/custom/unit/helpers/: json.hpp  main.cpp  string_maker.hpp  tests.cpp
tests/custom/unit/hpack/: huffman.cpp  manual.cpp
tests/h2spec/: todo.html
tests/httest/: 02_missing_host_http11.htt
tests/http/: test.txt
tests/support/: generic.cpp  generic.hpp  meson.build  sha1.cpp  sha1.hpp  support.hpp
tests/support/helpers/: c_types.cpp  c_types.hpp  cpp_types.cpp  cpp_types.hpp  hpack.cpp  hpack.hpp  http.cpp  http.hpp  json.cpp  json.hpp
tests/unit/: c_types.cpp  c_types.hpp  cpp_types.cpp  cpp_types.hpp  hash.cpp  hpack.cpp  hpack_huffman.cpp  http_parser.cpp  main.cpp  meson.build  serialize.cpp  string_maker.hpp  tap_reporter.hpp
tests/unit/files/: test.crt  test.key
tests/unit/helpers/: c_types.cpp  c_types.hpp  cpp_types.cpp  cpp_types.hpp  json.cpp  main.cpp  string_maker.hpp
tests/unit/hpack/: go-hpack.cpp  helpers.hpp  huffman.cpp  manual.cpp  nghttp2.cpp  swift-nio-hpack-huffman.cpp  swift-nio-hpack-plain-text.cpp  template.hpp
tools/: .gitignore  cert.conf  generate_certificates.sh  v3.ext
tools/generate/: index.ts  meson.build  package.json  tsconfig.json
tools/helper/: eslint.config.ts  index.ts  meson.build  meson_wrapper.sh  package.json  tsconfig.json
tools/helper/src/: all_cases.ts  compression.ts  generated.variants.def.json  generator.ts  hpack.ts  log.ts  subcommands.ts  utils.ts  variants.ts  ws_tests.ts
tools/helper/src/variants/: base.ts  data.ts  index.ts
