option(
    'secure',
    type: 'feature',
    value: 'auto',
    description: 'support secure connections (https / wss / ftps)',
)

option(
    'compression_features',
    type: 'array',
    value: [],
    choices: ['zstd', 'br', 'deflate', 'gzip'],
    description: 'specify compression features, that need to be present',
)

option(
    'test',
    type: 'boolean',
    value: true,
    description: 'also compile the tests',
)
