option(
    'secure',
    type: 'feature',
    value: 'auto',
    description: 'support secure connections (https / wss / ftps)',
)

option(
    'compression_features',
    type: 'array',
    value: [],
    choices: ['zstd', 'br', 'deflate', 'gzip', 'compress'],
    description: 'specify compression features, that need to be present',
)

option(
    'tests',
    type: 'boolean',
    value: false,
    description: 'also compile the tests',
)

option(
    'bcrypt_lib',
    type: 'combo',
    value: 'auto',
    choices: ['auto', 'bcrypt', 'libbcrypt', 'crypt_blowfish', 'crypt'],
    description: 'specify the bcrypt library to use',
)


option(
    'other_features',
    type: 'array',
    value: [],
    choices: ['bcrypt'],
    description: 'specify other needed features',
)
