src_files += files(
    'http_protocol.c',
    'http_protocol.h',
    'main.c',
    'myqueue.c',
    'myqueue.h',
    'secure.c',
    'secure.h',
    'send.c',
    'send.h',
    'server.c',
    'server.h',
    'string_builder.c',
    'string_builder.h',
    'string_helper.c',
    'string_helper.h',
    'thread_pool.c',
    'thread_pool.h',
    'utils.c',
    'utils.h',
    'ws.c',
    'ws.h',
)

inc_dirs += include_directories('.')

subdir('thirdparty')
