src_files += files(
    'compression.c',
    'compression.h',
    'header.c',
    'header.h',
    'http_2.c',
    'http_2.h',
    'http_protocol.c',
    'http_protocol.h',
    'mime.c',
    'mime.h',
    'routes.c',
    'routes.h',
    'folder.c',
    'folder.h',
    'send.c',
    'send.h',
    'server.c',
    'server.h',
)
