src_files += files(
    'compression.c',
    'compression.h',
    'debug.c',
    'debug.h',
    'folder.c',
    'folder.h',
    'header.c',
    'header.h',
    'mime.c',
    'mime.h',
    'parser.c',
    'parser.h',
    'protocol.c',
    'protocol.h',
    'routes.c',
    'routes.h',
    'send.c',
    'send.h',
    'server.c',
    'server.h',
    'uri.c',
    'uri.h',
    'v2.c',
    'v2.h',
)
