
support_src += files(
    'generic.cpp',
    'generic.hpp',
    'helpers/c_types.cpp',
    'helpers/c_types.hpp',
    'helpers/cpp_types.cpp',
    'helpers/cpp_types.hpp',
    'helpers/hpack.hpp',
    'helpers/hpack.cpp',
    'helpers/http.hpp',
    'helpers/http.cpp',
    'sha1.cpp',
    'sha1.hpp',
    'support.hpp',
    'helpers.hpp',
)
