
support_src += files(
    'generic.cpp',
    'generic.hpp',
    'helpers.hpp',
    'helpers/c_types.cpp',
    'helpers/c_types.hpp',
    'helpers/cpp_types.cpp',
    'helpers/cpp_types.hpp',
    'helpers/hpack.cpp',
    'helpers/hpack.hpp',
    'helpers/http.cpp',
    'helpers/http.hpp',
    'helpers/json.cpp',
    'helpers/json.hpp',
    'sha1.cpp',
    'sha1.hpp',
    'support.hpp',
)
